--- a/main.scss
+++ b/main.scss
@@ -10,10 +10,10 @@ a, a:visited {
   color: #222;
 }
 body {
-  background: url(./media/basic-pics/kitchen.jpeg) no-repeat center/cover;
+  background: url(./media/basic-pics/kitchen.jpeg) center/cover;
   padding: 2rem;
   min-height: 100vh;
-  max-width: 1100px;
+  max-width: 1200px;
   margin: 0 auto;
 
   h1 {
@@ -62,7 +62,7 @@ body {
     font-size: 4rem;
   }
   .searchContainer {
-    flex: 1 0 22%;
+    flex: 1 0 18%;
     background: rgba(128, 128, 128, 0.4);
     margin: .5rem;
     padding: 1rem 0;
